fix overflow of lights

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,18 +76,16 @@ html.dark {
 }
 
 .gradient-03 {
-  background: rgba(149, 66, 232, 0.516);
+  background: rgba(149, 66, 232, 0.776);
   filter: blur(175px);
 }
 
 .gradient-04 {
   background: rgba(45, 72, 152, 0.75);
   filter: blur(200px);
-  transform: rotate(-53.13deg);
 }
 
 .gradient-05 {
   background: rgba(45, 72, 152, 0.75);
   filter: blur(200px);
-  transform: rotate(53.13deg);
 }
